kubernetes/nginx-ingress/flask-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: flask-app-svc-stable
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 5000
    protocol: TCP
  selector:
    app: flask-app
    version: GREEN
---
apiVersion: v1
kind: Service
metadata:
  name: flask-app-svc-stage
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 5000
    protocol: TCP
  selector:
    app: flask-app
    version: GREEN
